# udjdudjdu

./: .env.example  .gitignore  README.md  docker-compose.yml  netlify.toml  package.json  pyproject.toml  render.yaml  replit.md  vercel.json
.github/workflows/: deploy.yml
admin/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin/src/: App.tsx  index.css
admin/src/components/: Layout.tsx
admin/src/lib/: api.ts  auth.ts
admin/src/pages/: Acts.tsx  Cases.tsx  Chunks.tsx  Dashboard.tsx  Documents.tsx  Login.tsx  Pipeline.tsx  Settings.tsx  Sources.tsx  Users.tsx
attached_assets/: Pasted--git-push-origin-main-Enumerating-objects-56-done-Count_1782070362679.txt  Pasted-seee-there-are-12-options-here-but-many-of-them-redirec_1781986688578.txt  Pasted-udjdudjdu-Gavel-Brief-AI-Powered-Legal-Intelligence-Pla_1782063958514.txt
backend/: admin_routes.py  comprehensive_ipc_laws.json  decision_trees.json  ipc_laws_data.json  past_cases_data.json  pdf_pipeline.py  render.yaml  requirements.txt  server.py  supabase_db.py
backend/memory/: test_credentials.md
backend/tests/: test_intelligence_engine.py  test_new_features.py
frontend/: .gitignore  Dockerfile  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.cjs  vercel.json  vite.config.js
frontend/public/: 404.html  _redirects  index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: CaseChat.js  CaseNotes.js  CaseStatusTracker.js  ChatWidget.js  DigestWatcher.js  DocumentUpload.js  Footer.js  KnowledgeBase.js  Navbar.js  (+7 more)
(+44 files in other folders)
