[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "starlette>=1.3.1",
    "uvicorn>=0.49.0",
]
